--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: minecraft-server
+    name: rcb0McServer
     env: node
-    buildCommand: 'npm install'
-    startCommand: 'node server.js'
     plan: free
-    region: oregon
-    autoDeploy: true
-    healthCheckPath: /
+    buildCommand: npm install
+    startCommand: npm run start
+    envVars:
+      - key: PORT
+        value: 3000
